force-app/main/default/objects/Client__c/fields/Address__c.field-meta.xml
<CustomField><fullName>Address__c</fullName><externalId>false</externalId><label>Address</label><required>false</required><trackTrending>false</trackTrending><type>TextArea</type></CustomField>