force-app/main/default/objects/Client__c/fields/City__c.field-meta.xml
<CustomField><fullName>City__c</fullName><externalId>false</externalId><label>City</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Hyderabad</fullName><default>false</default><label>Hyderabad</label></value><value><fullName>Mumbai</fullName><default>false</default><label>Mumbai</label></value><value><fullName>Delhi</fullName><default>false</default><label>Delhi</label></value><value><fullName>Bangalore</fullName><default>false</default><label>Bangalore</label></value><value><fullName>Chennai</fullName><default>false</default><label>Chennai</label></value><value><fullName>Alaminos</fullName><default>false</default><label>Alaminos</label></value><value><fullName>Angeles City</fullName><default>false</default><label>Angeles City</label></value><value><fullName>Palayan</fullName><default>false</default><label>Palayan</label></value><value><fullName>Quezon City</fullName><default>false</default><label>Quezon City</label></value><value><fullName>San Juan</fullName><default>false</default><label>San Juan</label></value><value><fullName>Riyadh</fullName><default>false</default><label>Riyadh</label></value><value><fullName>Jeddah</fullName><default>false</default><label>Jeddah</label></value><value><fullName>Tayma</fullName><default>false</default><label>Tayma</label></value><value><fullName>Dammam</fullName><default>false</default><label>Dammam</label></value><value><fullName>Medina</fullName><default>false</default><label>Medina</label></value><value><fullName>New York</fullName><default>false</default><label>New York</label></value><value><fullName>Los Angeles</fullName><default>false</default><label>Los Angeles</label></value><value><fullName>Chicago</fullName><default>false</default><label>Chicago</label></value><value><fullName>Houston</fullName><default>false</default><label>Houston</label></value><value><fullName>Columbus</fullName><default>false</default><label>Columbus</label></value><value><fullName>Geneva</fullName><default>false</default><label>Geneva</label></value><value><fullName>Basel</fullName><default>false</default><label>Basel</label></value><value><fullName>Lausanne</fullName><default>false</default><label>Lausanne</label></value><value><fullName>Bern</fullName><default>false</default><label>Bern</label></value><value><fullName>Lucerne</fullName><default>false</default><label>Lucerne</label></value></valueSetDefinition></valueSet></CustomField>