force-app/main/default/objects/Client__c/fields/Country__c.field-meta.xml
<CustomField><fullName>Country__c</fullName><externalId>false</externalId><label>Country</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>India</fullName><default>false</default><label>India</label></value><value><fullName>Philippines</fullName><default>false</default><label>Philippines</label></value><value><fullName>Saudi Arabia</fullName><default>false</default><label>Saudi Arabia</label></value><value><fullName>USA</fullName><default>false</default><label>USA</label></value><value><fullName>Switzerland</fullName><default>false</default><label>Switzerland</label></value><value><fullName>Thailand</fullName><default>false</default><label>Thailand</label></value><value><fullName>Maldives</fullName><default>false</default><label>Maldives</label></value><value><fullName>Dubai</fullName><default>false</default><label>Dubai</label></value><value><fullName>Sri Lanka</fullName><default>false</default><label>Sri Lanka</label></value><value><fullName>Bangkok</fullName><default>false</default><label>Bangkok</label></value><value><fullName>Singapore</fullName><default>false</default><label>Singapore</label></value><value><fullName>Myanmar</fullName><default>false</default><label>Myanmar</label></value><value><fullName>France</fullName><default>false</default><label>France</label></value><value><fullName>Nepal</fullName><default>false</default><label>Nepal</label></value></valueSetDefinition></valueSet></CustomField>