force-app/main/default/objects/Client__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><externalId>false</externalId><label>Phone</label><required>false</required><trackTrending>false</trackTrending><type>Phone</type></CustomField>