force-app/main/default/objects/Client__c/validationRules/Email_Valid_Address.validationRule-meta.xml
<ValidationRule><fullName>Email_Valid_Address</fullName><active>true</active><description>Client email must be a valid address</description><errorConditionFormula>NOT(REGEX(Email__c, "^[a-zA-Z0-9._]+@[a-zA-Z0-9.]+\\.[a-zA-Z]{2,}$" ))</errorConditionFormula><errorDisplayField>Email__c</errorDisplayField><errorMessage>Please Enter Valid Email Address</errorMessage></ValidationRule>